lightbox: fixed issues with close icon not showing for logged out users, vertical position of settings panel being affected by scroll, enabling custom css coding
https://www.meistertask.com/app/task/c7BoFnEi/master-lightboxes-rendere-different-in-editor-live-site

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -11573,7 +11573,7 @@ div.inline-number.plaintext-settings input {
   bottom: 0;
   right: 0;
   width: 100%;
-  z-index: 2000;
+  z-index: 10001001;
   display: none; }
 
 .upfront-css-top {
